Takes user from input, displays db entry on new page. Add menu.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,11 @@
             </intent-filter>
         </activity>
 
+        <activity
+            android:name=".ViewEntries"
+            android:label="View Entries">
+        </activity>
+
     </application>
 
 </manifest>
